Step3 : 구간 제거 기능 심화 구현 (#38)
* refactor: API각각의 RequestDto/ResponseDto를 생성한다

* refactor: LineService의 재할당되는 부분을 제거하고 final을 사용한다

* refactor: LineDao에서 find line을 할 경우, sections를 조립한 상태로 반환한다

* docs: README.md에 구간 삭제 기능을 문서화한다

* test: Section.disconnectUpSection 메소드는 상행역과의 연결을 끊는다

* feat: Section.disconnectUpSection 메소드는 상행역과의 연결을 끊는다

* fix: LineDao의 수정에 따른 LineService와 테스트를 수정한다

* test: Section.disconnectMiddleSection 메소드는 가운데 구간을 제거하고 재배치한다

* test: SectionDisconnector클래스는 구간 제거 케이스를 구별하여 연결을 끊는다

* feat: SectionDisconnector클래스는 구간 제거 케이스를 구별하여 연결을 끊는다

* test: Line.disconnectSection 메소드는 line에서 station을 포함한 구간을 제거한다

* feat: Line.disconnectSection 메소드는 line에서 station을 포함한 구간을 제거한다

* test: LineService.disconnectSectionByStationId 메소드는 line에서 station을 제거한 후 재배치한다

* feat: LineService.disconnectSectionByStationId 메소드는 line에서 station을 제거한 후 재배치한다

* refactor: SectionDao.deleteByLineAndDownStationId를SectionDao.deleteByLineIdAndStationId로 변경한다

* feat: LineController.deleteSection 메소드는 lineId에 해당하는 line에서 stationId에 해당하는 station을 제거한다

* refactor: Line.disconnectSection에 포함된 기능인Line.disconnectDownSection을 제거한다

* docs: 구간삭제 기능구현을 문서화한다

* test: 구간 추가 확장 기능에 따른 불필요한 테스트 코드를 삭제한다

* refactor: 불필요한 toString 제거

* refactor: connectSection메소드를 findUpdateSection로 변경한다

* refactor: Section.getUpdateSection 메소드를 추출한다

* refactor: disconnectSection메소드를 findUpdateSectionWhenDisconnect로 변경한다

* test: LineIntegrationTest의 공통 request를 각각의 테스트해서 생성한다

* refactor: join을 서브쿼리로 변경한다

* fix: SectionDao.FIND_ALL_BY_LINE_ID_SQL 쿼리를 수정한다

* refactor: 각 API 마다 Response와 Request를 독립적으로 분리한다

* test: 구간제거에 대한 예외테스트를 추가한다

* refactor: 불필요한 출력을 제거한다

* refactor: RequestDto의 빈생성자의 접근제어자를 private으로 변경한다

* refactor: ResponseDto를 Find와 Create로 생성한다