@@ -11,6 +11,7 @@ import subway.exception.StationException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.catchException;
@@ -32,40 +33,41 @@ class LineTest {
     }
 
     @Nested
-    @DisplayName("disconnectDownSection 메소드는")
-    class DisconnectDownSection_Method {
+    @DisplayName("findUpdateSectionWhenDisconnect 메소드는")
+    class FindUpdateSectionWhenDisconnect_Method {
 
         @Test
-        @DisplayName("line의 하행 Station과 일치하는 Station이 들어오면 연결을 끊는다")
-        void Return_True_When_Input_Station() {
+        @DisplayName("removeStation이 line의 하행역과 일치한다면, Optional.empty를 반환한다")
+        void Return_Optional_Empty_When_Remove_Station_Equals_Line_Down_Station() {
             // given
+            Station removeStation = station3;
             Section section1 = DomainFixture.Section.buildWithStations(station1, station2);
-            Section section2 = DomainFixture.Section.buildWithStations(station2, station3);
+            Section section2 = DomainFixture.Section.buildWithStations(station2, removeStation);
 
             Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(section1, section2)));
 
             // when
-            line.disconnectDownSection(station3);
+            Optional<Section> updateSection = line.findUpdateSectionWhenDisconnect(removeStation);
 
             // then
-            assertThat(section1.getDownSection()).isNull();
-            assertThat(section2.getUpSection()).isNull();
+            assertThat(updateSection).isEmpty();
         }
 
         @Test
-        @DisplayName("입력된 Station이 line의 하행 Station과 일치 하지 않으면, StationException을 던진다")
-        void Throw_StationException_When_Not_Equal_Station() {
+        @DisplayName("removeStation이 line의 상행역과 일치한다면, Optional.empty를 반환한다")
+        void Return_Optional_Empty_When_Remove_Station_Equals_Line_Up_Station() {
             // given
-            Section section1 = DomainFixture.Section.buildWithStations(station1, station2);
+            Station removeStation = station1;
+            Section section1 = DomainFixture.Section.buildWithStations(removeStation, station2);
             Section section2 = DomainFixture.Section.buildWithStations(station2, station3);
 
             Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(section1, section2)));
 
             // when
-            Exception exception = catchException(() -> line.disconnectDownSection(station1));
+            Optional<Section> updateSection = line.findUpdateSectionWhenDisconnect(removeStation);
 
             // then
-            assertThat(exception).isInstanceOf(StationException.class);
+            assertThat(updateSection).isEmpty();
         }
 
         @Test
@@ -77,27 +79,44 @@ class LineTest {
             Line line = new Line(1L, "line", "red", Arrays.asList(section1));
 
             // when
-            Exception exception = catchException(() -> line.disconnectDownSection(station2));
+            Exception exception = catchException(() -> line.findUpdateSectionWhenDisconnect(station2));
 
             // then
             assertThat(exception).isInstanceOf(LineException.class);
         }
 
+
         @Test
-        @DisplayName("line의 중간에 있는 section을 삭제하려고 할 경우, StationException을 던진다")
-        void Throw_SectionException_When_Disconnect_Middle_Section() {
+        @DisplayName("removeStation이 line의 중간에 존재한다면, 갱신된 Section을 반환한다")
+        void Return_Update_Section_When_Remove_Station_Is_Middle() {
             // given
-            Section section1 = DomainFixture.Section.buildWithStations(station1, station2);
-            Section section2 = DomainFixture.Section.buildWithStations(station2, station3);
-            Section section3 = DomainFixture.Section.buildWithStations(station3, station4);
+            Station removeStation = station2;
+            Section section1 = DomainFixture.Section.buildWithStations(station1, removeStation, 10);
+            Section section2 = DomainFixture.Section.buildWithStations(removeStation, station3, 20);
 
-            section1.connectSection(section2);
-            section2.connectSection(section3);
-
-            Line line = new Line(1L, "line", "red", Arrays.asList(section1, section2, section3));
+            Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(section1, section2)));
 
             // when
-            Exception exception = catchException(() -> line.disconnectDownSection(station3));
+            Optional<Section> updateSection = line.findUpdateSectionWhenDisconnect(removeStation);
+
+            // then
+            assertThat(updateSection.get().getDistance()).isEqualTo(30);
+            assertThat(updateSection.get().getUpStation()).isEqualTo(station1);
+            assertThat(updateSection.get().getDownStation()).isEqualTo(station3);
+        }
+
+        @Test
+        @DisplayName("입력으로 들어온 Station이 line에 존재하지 않을 경우, StationException을 던진다")
+        void Throw_StationException_When_Station_Not_Exists() {
+            // given
+            Station requestStation = station4;
+            Section section1 = DomainFixture.Section.buildWithStations(station1, station2, 10);
+            Section section2 = DomainFixture.Section.buildWithStations(station2, station3, 20);
+
+            Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(section1, section2)));
+
+            // when
+            Exception exception = catchException(() -> line.findUpdateSectionWhenDisconnect(requestStation));
 
             // then
             assertThat(exception).isInstanceOf(StationException.class);
@@ -105,40 +124,103 @@ class LineTest {
     }
 
     @Nested
-    @DisplayName("connectSection 메소드는")
-    class ConnectSection_Method {
+    @DisplayName("findUpdateSection 메소드는")
+    class FindUpdateSection_Method {
 
         @Test
-        @DisplayName("입력으로 들어온 Section의 하행 station과 line의 상행 종점 station이 일치하면, 연결을 성공한다")
-        void Connect_Success_When_Input_Down_Station_Equals_Line_Up_Station() {
+        @DisplayName("입력으로 들어온 Section의 하행 station과 line의 상행 종점 station이 일치하면, Optional.empty를 반환한다")
+        void Return_Optional_Empty_When_Input_Down_Station_Equals_Line_Up_Station() {
             // given
-            Section section2 = DomainFixture.Section.buildWithStations(station2, station3);
+            Station upStation = station1;
+            Station downStation = station2;
+            Section section2 = DomainFixture.Section.buildWithStations(downStation, station3);
 
             Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(section2)));
 
-            Section requestSection = DomainFixture.Section.buildWithStations(station1, station2);
+            Section requestSection = DomainFixture.Section.buildWithStations(upStation, downStation);
 
             // when
-            Exception exception = catchException(() -> line.connectSection(requestSection));
+            Optional<Section> updateSection = line.findUpdateSectionWhenConnect(requestSection);
 
             // then
-            assertThat(exception).isNull();
-            assertThat(requestSection.getDownSection()).isEqualTo(section2);
-            assertThat(section2.getUpSection()).isEqualTo(requestSection);
+            assertThat(updateSection).isEmpty();
+        }
+
+        @Test
+        @DisplayName("입력으로 들어온 Section의 상행 station과 line의 하행 station이 일치하면, Optional.empty를 반환한다")
+        void Return_Optional_Empty_When_Input_Up_Station_Equals_Line_Down_Station() {
+            // given
+            Station upStation = station2;
+            Station downStation = station3;
+            Section section1 = DomainFixture.Section.buildWithStations(station1, upStation);
+
+            Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(section1)));
+
+            Section requestSection = DomainFixture.Section.buildWithStations(upStation, downStation);
+
+            // when
+            Optional<Section> updateSection = line.findUpdateSectionWhenConnect(requestSection);
+
+            // then
+            assertThat(updateSection).isEmpty();
+        }
+
+        @Test
+        @DisplayName("입력으로 들어온 Section의 하행 station과 line의 중간 station이 일치하면, 갱신된 Section을 반환한다")
+        void Return_Update_Section_When_Input_Down_Station_Equals_Line_Middle_Station() {
+            // given
+            Station upstation = station2;
+            Station downStation = station3;
+            Section section1 = DomainFixture.Section.buildWithStations(station1, downStation, 10);
+            Section section2 = DomainFixture.Section.buildWithStations(downStation, station4, 10);
+
+            Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(section1, section2)));
+
+            Section requestSection = DomainFixture.Section.buildWithStations(upstation, downStation, 5);
+
+            // when
+            Section updateSection = line.findUpdateSectionWhenConnect(requestSection).get();
+
+            // then
+            assertThat(updateSection.getUpStation()).isEqualTo(station1);
+            assertThat(updateSection.getDownStation()).isEqualTo(upstation);
+        }
+
+        @Test
+        @DisplayName("입력으로 들어온 Section의 상행 station과 line의 중간 station이 일치하면, 갱신된 Section을 반환한다")
+        void Return_Update_Section_When_Input_Up_Station_Equals_Line_Middle_Station() {
+            // given
+            Station upStation = station2;
+            Station downStation = station3;
+            Section section1 = DomainFixture.Section.buildWithStations(station1, upStation, 10);
+            Section section2 = DomainFixture.Section.buildWithStations(upStation, station4, 10);
+
+            Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(section1, section2)));
+
+            Section requestSection = DomainFixture.Section.buildWithStations(upStation, downStation, 5);
+
+            // when
+            Section updateSection = line.findUpdateSectionWhenConnect(requestSection).get();
+
+            // then
+            assertThat(updateSection.getUpStation()).isEqualTo(downStation);
+            assertThat(updateSection.getDownStation()).isEqualTo(station4);
         }
 
         @Test
         @DisplayName("입력으로 들어온 Section의 상행, 하행 역이 line에 모두 존재할 경우, StationException을 던진다")
         void Throw_StationException_When_UpStation_And_DownStation_All_Exists() {
             // given
-            Section section = DomainFixture.Section.buildWithStations(station1, station2, 2);
+            Station upStation = station1;
+            Station downStation = station2;
+            Section section = DomainFixture.Section.buildWithStations(upStation, downStation, 2);
 
             Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(section)));
 
-            Section requestSection = DomainFixture.Section.buildWithStations(station1, station2, 1);
+            Section requestSection = DomainFixture.Section.buildWithStations(upStation, downStation, 1);
 
             // when
-            Exception exception = catchException(() -> line.connectSection(requestSection));
+            Exception exception = catchException(() -> line.findUpdateSectionWhenConnect(requestSection));
 
             // then
             assertThat(exception).isInstanceOf(StationException.class);
@@ -148,14 +230,16 @@ class LineTest {
         @DisplayName("입력으로 들어온 Section의 상행, 하행 역이 line에 모두 존재하지 않을 경우, StationException을 던진다")
         void Throw_StationException_When_UpStation_And_DownStation_All_Not_Exists() {
             // given
-            Section section = DomainFixture.Section.buildWithStations(station1, station2, 2);
+            Station upStation = station1;
+            Station downStation = station2;
+            Section section = DomainFixture.Section.buildWithStations(station3, station4, 2);
 
             Line line = new Line(1L, "line", "red", new ArrayList<>(List.of(section)));
 
-            Section requestSection = DomainFixture.Section.buildWithStations(station3, station4, 1);
+            Section requestSection = DomainFixture.Section.buildWithStations(upStation, downStation, 1);
 
             // when
-            Exception exception = catchException(() -> line.connectSection(requestSection));
+            Exception exception = catchException(() -> line.findUpdateSectionWhenConnect(requestSection));
 
             // then
             assertThat(exception).isInstanceOf(StationException.class);
